--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,20 @@ jobs:
           else
             echo "✅ VITE_FIREBASE_API_KEY is available"
           fi
+          if [ -z "${{ secrets.VITE_FIREBASE_PROJECT_ID }}" ]; then
+            echo "❌ VITE_FIREBASE_PROJECT_ID is missing"
+          else
+            echo "✅ VITE_FIREBASE_PROJECT_ID is available"
+          fi
           if [ -z "${{ secrets.VITE_GEMINI_API_KEY }}" ]; then
             echo "❌ VITE_GEMINI_API_KEY is missing"
           else
             echo "✅ VITE_GEMINI_API_KEY is available"
+          fi
+          if [ -z "${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}" ]; then
+            echo "❌ VITE_FIREBASE_AUTH_DOMAIN is missing"
+          else
+            echo "✅ VITE_FIREBASE_AUTH_DOMAIN is available"
           fi
 
       - name: Create environment file
@@ -52,6 +62,12 @@ jobs:
           echo "Environment file created:"
           echo "VITE_FIREBASE_PROJECT_ID=${{ secrets.VITE_FIREBASE_PROJECT_ID }}"
           echo "VITE_GEMINI_API_KEY=***hidden***"
+          
+          echo "Checking .env file contents:"
+          echo "Lines in .env: $(wc -l < .env)"
+          echo "VITE_FIREBASE_API_KEY exists: $(grep -c 'VITE_FIREBASE_API_KEY' .env)"
+          echo "VITE_FIREBASE_PROJECT_ID exists: $(grep -c 'VITE_FIREBASE_PROJECT_ID' .env)"
+          echo "VITE_GEMINI_API_KEY exists: $(grep -c 'VITE_GEMINI_API_KEY' .env)"
 
       - name: Build project
         run: npm run build
