Update app name to MASROF for mobile home screen
- Change app name from 'المصاريف' to 'MASROF' in manifest.json
- Update page title to 'MASROF | لوحة التحكم المالية'
- Update apple-mobile-web-app-title to 'MASROF'
- This ensures the correct name and icon appear when adding to home screen

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "نظام إدارة المصاريف",
-  "short_name": "المصاريف",
+  "name": "MASROF - نظام إدارة المصاريف",
+  "short_name": "MASROF",
   "start_url": "/fd/",
   "display": "standalone",
   "background_color": "#ffffff",
