--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,76 @@
 {
-  "name": "MASROF - نظام إدارة المصاريف",
+  "name": "MASROF - لوحة التحكم المالية",
   "short_name": "MASROF",
-  "start_url": "/fd/",
+  "description": "تطبيق إدارة المالية الشخصية مع الذكاء الاصطناعي",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
+  "orientation": "portrait-primary",
+  "categories": ["finance", "productivity", "utilities"],
+  "lang": "ar",
+  "dir": "rtl",
   "icons": [
     {
-      "src": "/fd/icons/icon-192.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/fd/icons/icon-512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshot-mobile.png",
+      "sizes": "390x844",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshot-desktop.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    }
+  ],
+  "features": [
+    "إدارة المعاملات المالية",
+    "تحليل الذكاء الاصطناعي",
+    "إدارة البطاقات الائتمانية",
+    "تتبع الأقساط",
+    "إدارة الديون والقروض",
+    "الوضع المظلم",
+    "الإشعارات الذكية"
+  ],
+  "shortcuts": [
+    {
+      "name": "إضافة معاملة",
+      "short_name": "إضافة",
+      "description": "إضافة معاملة مالية جديدة",
+      "url": "/?action=add-transaction",
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
+    },
+    {
+      "name": "الملخص المالي",
+      "short_name": "ملخص",
+      "description": "عرض الملخص المالي",
+      "url": "/?tab=summary",
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ]
 }
