--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "MASROF - لوحة التحكم المالية",
   "short_name": "MASROF",
   "description": "تطبيق إدارة المالية الشخصية مع الذكاء الاصطناعي",
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
@@ -12,30 +12,16 @@
   "dir": "rtl",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "./icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshot-mobile.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "/screenshot-desktop.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
     }
   ],
   "features": [
@@ -44,18 +30,19 @@
     "إدارة البطاقات الائتمانية",
     "تتبع الأقساط",
     "إدارة الديون والقروض",
-    "الوضع المظلم",
-    "الإشعارات الذكية"
+    "الإشعارات الذكية",
+    "البحث الجغرافي الذكي",
+    "النسخ الاحتياطي السحابي"
   ],
   "shortcuts": [
     {
       "name": "إضافة معاملة",
       "short_name": "إضافة",
       "description": "إضافة معاملة مالية جديدة",
-      "url": "/?action=add-transaction",
+      "url": "./?action=add-transaction",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "./icon-192.png",
           "sizes": "192x192"
         }
       ]
@@ -64,10 +51,10 @@
       "name": "الملخص المالي",
       "short_name": "ملخص",
       "description": "عرض الملخص المالي",
-      "url": "/?tab=summary",
+      "url": "./?tab=summary",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "./icon-192.png",
           "sizes": "192x192"
         }
       ]
