--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@google/generative-ai": "^0.21.0",
-    "firebase": "^10.7.1",
-    "localforage": "^1.10.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
+    "firebase": "^10.14.1",
+    "localforage": "^1.10.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
-    "gh-pages": "^6.1.0"
+    "gh-pages": "^6.1.0",
+    "vite": "^5.0.8"
   },
   "keywords": [
     "financial",
