--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@google/genai": "^1.25.0",
     "@google/generative-ai": "^0.21.0",
     "chart.js": "^4.4.0",
     "firebase": "^10.14.1",
