--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "MASROF - لوحة التحكم المالية",
   "short_name": "MASROF",
   "description": "تطبيق إدارة المالية الشخصية مع الذكاء الاصطناعي",
-  "start_url": "./index.html",
+  "start_url": "/fd/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
@@ -12,13 +12,13 @@
   "dir": "rtl",
   "icons": [
     {
-      "src": "./icon-192.png",
+      "src": "/fd/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./icon-512.png",
+      "src": "/fd/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -42,7 +42,7 @@
       "url": "./?action=add-transaction",
       "icons": [
         {
-          "src": "./icon-192.png",
+          "src": "/fd/icon-192.png",
           "sizes": "192x192"
         }
       ]
@@ -54,7 +54,7 @@
       "url": "./?tab=summary",
       "icons": [
         {
-          "src": "./icon-192.png",
+          "src": "/fd/icon-192.png",
           "sizes": "192x192"
         }
       ]
